--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.datasource.password= java123
 #changeme
 ###########################################################
 #jpa
-spring.jpa.hibernate.ddl-auto= create-drop
+## spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL81Dialect
 spring.jpa.properties.hibernate.format_sql= false
 spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer= false
